# sed

./: .gitignore  AUTHORS.md  CONTRIBUTING.md  Dockerfile  README.md  cookiecutter_instructions.md  mkdocs.yml  pyproject.toml  test.json
bsedic/: execution.py
bsedic/pbic3g/: local_registry.py
bsedic/pbic3g/containerization/: container_constructor.py
bsedic/pbif/tools/: __init__.py  builder.py  comparison.py  stats.py
bsedic/sed/: abstract_router.py  data_structure.py  transpiler.py
bsedic/utils/: experiment_archive.py  input_types.py
docs/: index.md  modules.md
examples/: Allen_ReaDDy_Actin.py  Types explained.json  sed2_schema.json  sed2_specification.json
examples/one/: example.pbg  example1.xml  pb.json  sed.json
examples/three/: sed.json
examples/two/: sed.json
sed/: abstract_router.py  compiler.py  globals.py  transpiler.py
sed/transpiler/: demo_transpiler.py  inputs_manager.py  library.py  outputs_manager.py  parse_math.py  python_transpiler_target.py  tasks_manager.py  transpile_to_pbg.py  transpile_to_python.py  transpiler.py
tests/: test_foo.py  test_transpile.py  transpile.py  utils.py
tests/examples/: Types explained.json  example.pbif  example.sed2  zekes_example.sed2
tests/examples/one/: experimental_data.csv  sed.json
tests/examples/two/: sed.json
tests/fixtures/: pb.py
tests/standard_tools/: harmony.py  test_builder.py  test_comparison.py
