[project]
name = "bsedic"
version = "0.0.1"
description = "BSedic is a BioSimulators project designed to allow users to transform their biological experiments written in Sed into Process-Bigraph simulations."
authors = [{ name = "Center for Reproducable Biological Modeling", email = "drescher@uchc.edu" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.11,<3.13"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # "jinja2>=3.1.6",
    "numpy>=2.3.4",
    # "pandas>=2.3.3",
    # "polars>=1.35.2",
    "process-bigraph>=0.0.51",
    "pydantic>=2.12.3",
    # "python-libsbml>=5.20.5",
    "spython>=0.3.14",
    # "vivarium-interface>=0.0.5",
]

[project.urls]
Homepage = "https://biosimulators.github.io/bsedic/"
Repository = "https://github.com/biosimulators/bsedic"
Documentation = "https://biosimulators.github.io/bsedic/"

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "tox-uv>=1.11.3",
    "deptry>=0.23.0",
    "mypy>=0.991",
    "pytest-cov>=4.0.0",
    "ruff>=0.11.5",
    "mkdocs>=1.4.2",
    "mkdocs-material>=8.5.10",
    "mkdocstrings[python]>=0.26.1",
    "tellurium>=2.2.11.1",
    "biocompose",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bsedic"]

[tool.mypy]
files = ["bsedic"]
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["process_bigraph.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["bsedic"]

[tool.uv.sources]
biocompose = { git = "https://github.com/vivarium-collective/biocompose", rev = "numerical-types" }
# biocompose =  { path = "../biocompose", editable = true }
